[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["m.khlapov <m.khlapov@1inch.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.2"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
